--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-scripts": "4.0.3",
     "react-slick": "0.28.1",
     "react-typed": "^1.2.0",
+    "redux": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
